syntax = "proto3";
package icon.lightclient.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

// java_package output
option java_package = "com.light-client.icon";
option java_outer_classname = "IconProtos";

// go_package output 
option go_package = "libraries/go/common/icon;icon";
option (gogoproto.goproto_getters_all)  = false;

import "icon/types/v1/types.proto";

message ClientState {
  option (gogoproto.goproto_getters) = false;

  uint64 trusting_period = 1
      [(gogoproto.moretags) = "yaml:\"trusting_period\""];

  uint64 frozen_height = 2
      [(gogoproto.moretags) = "yaml:\"frozen_height\""];
  
  uint64 max_clock_drift = 3
      [ (gogoproto.moretags) = "yaml:\"max_clock_drift\""];

  uint64 latest_height = 4
      [(gogoproto.moretags) = "yaml:\"latest_height\""];

  bytes network_section_hash = 5
      [(gogoproto.moretags) = "yaml:\"network_section_hash\""];

  repeated bytes validators= 6
      [(gogoproto.moretags) = "yaml:\"validators\""];
}

message ConsensusState {
  bytes message_root= 1;
}

message BlockUpdate {
  icon.types.v1.SignedHeader header =1;
}

message Misbehaviour {
  string client_id = 1;
  BlockUpdate header_1  = 2 [(gogoproto.customname) = "Header1"];
  BlockUpdate header_2  = 3 [(gogoproto.customname) = "Header2"];
}

